style.css
@font-face {font-family:"owners";
src:url("fonts/owners-bold.woff2") format("woff2");
font-style:normal;font-weight:700;font-stretch:normal;font-display: swap}
@font-face {font-family: 'space-mono';
src:url("fonts/space-mono-bold.woff2") format("woff2");
font-style:normal;font-weight:700;font-stretch:normal;font-display: swap}
@font-face {
font-family: 'space-mono';
src:url("fonts/space-mono.woff2") format("woff2");
font-style:normal;font-weight:500;font-stretch:normal;font-display: swap}

* {text-decoration: none;}
body {margin: 0px 0px 0px 0px; background: var(--black)}
html {scroll-behavior: smooth; --black: #121212; --yellow: rgb(230, 245, 0); --white: #F3F2EB; cursor: crosshair;}

h1 {font-family: "owners", sans-serif;
    letter-spacing: 1pt;
    margin: 0;}

h2 {font-family: "space-mono", monospace;
    font-weight: 400;
    font-style: normal;
    font-size: 16px;}

symbol {font-family: "space-mono", monospace;
    font-weight: 700;
    font-style: normal;
    font-size: 16px;}

.typed-cursor{color: var(--yellow)}

a {color: inherit;}

.container{
    display: flex;
    justify-content: left;
    padding-bottom: 15px;
    line-height: 12.5vw;
    color: var(--white);
}

div.container>h1{
	/* font-size: 32px; */
	font-size: 16vw;
}

h1{font-size: 32px;}
html {scroll-behavior: smooth}

#menuToggle {
    display: block;
    position: fixed;
    top: 25px;
    left: 20px;
    height: 0;
    width: 0;
    z-index: 999;
    user-select: none;
}

a {text-decoration: none}
ul {list-style-type: none}
 
#menuToggle input {
    z-index: 999999;
    display: block;
    width: 40px;
    height: 32px;
    position: absolute;
    top: -7px;
    left: -5px;
    cursor: pointer;
    opacity: 0;
    -webkit-touch-callout: none;
}

#menuToggle span {
    z-index: 999999;
    display: block;
    width: 33px;
    height: 4px;
    margin-bottom: 5px;
    position: relative;
    background: var(--black);
    border-radius: 0;
    z-index: 1;
    left: 0px;
    transform-origin: 4px 0px;
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
                opacity 0.55s ease;
}

.pages {
    display: flex;
    flex-direction: row;
    overflow: hidden;
    will-change: scroll-position;
    width: 100vw;
    height: 100vh;
}

#menuToggle span:first-child {transform-origin: 0% 0%;}
#menuToggle span:nth-last-child(2) {transform-origin: 0% 100%}

#menuToggle input:checked ~ span {opacity: 1; transform: rotate(45deg) translate(-2px, -1px);}

#menuToggle input:checked ~ span:nth-last-child(3) {opacity: 0;transform: rotate(0deg) scale(0.2, 0.2)}
#menuToggle input:checked ~ span:nth-last-child(2) {transform: rotate(-45deg) translate(0, -1px)}

.menu {
    z-index: 999999;
    height: 100vh;
    width: 100vw;
    margin: -100px 0 0 -60px;
    padding: 75px;
    padding-top: 125px;
    background-attachment: fixed;
    background: linear-gradient(0.75turn, var(--yellow) 1%, #f2ff009a 10%);
    -webkit-backdrop-filter: blur(12px);
    backdrop-filter: blur(12px);
    transform-origin: 0% 0%;
    transform: translate(calc(-100% + 115px), 0);
    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
    display: flex;
    gap: 25px 0;
    flex-direction: column}

#menuToggle input:checked ~ ul {transform: none}

.design{padding-left: 3.7vw}

.nav1 {display: none;}

.hero {
    display: flex;
    flex-direction: column;
    align-items: right;
    width: 100vw;
    background: var(--black)
}

.pageheader {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 140px;
}

#about {
    height: 100vh;
    display: flex;
    flex-direction: row;
    background: linear-gradient(0.75turn, var(--yellow) 0%, #f3ff0f9a 100%);
    -moz-backdrop-filter: blur(12px);
    -webkit-backdrop-filter: blur(12px);
    backdrop-filter: blur(12px);
    margin-left: calc(100vw - 50px);
    gap: 100px;
    align-items: center;
    padding: 0 100px 0 100px;
}

.about-column {
    padding: 50px;
    color: var(--black);
    width: 400px;
}

.directions {
    display: flex;
    width: 100vw;
    background: var(--black);
    -moz-backdrop-filter: blur(0px);
    -webkit-backdrop-filter: blur(0px);
    backdrop-filter: blur(0px);
    flex-direction: column;
}

.hero-grid {
	border-style: solid; 
	border-color: var(--yellow)
}

.about-grid {
	border-style: solid; 
	border-color: var(--black)
}

.directions-grid {
	border-style: solid; 
	border-color: var(--white);
    box-sizing: border-box;
}

.hero-grid-left {
	flex: 1; 
    min-width: 80vw;
}

.hero-grid-right {width:100px}

.directions-grid-left {width: 100px; background-color: var(--black); backdrop-filter: blur(0px); -webkit-backdrop-filter: (0px);}

.directions-grid-right {flex: 1; min-width: 80vw; background-color: var(--black)}

.hero-sub {line-height: 34px;}

.directions-container {
    box-sizing: border-box;
    height: 100%;
    width: 100%;
    color: var(--white);
    padding-left: 50px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

.directions-image {
    max-width: 300px;
}

.directions-text {
    display: flex;
    flex-direction: column;
    gap: 10px;
}



#scroll {
    display: flex;
    flex-direction: column;
    align-items: right;
    width: 100vw;
    height: calc(100vh - 0px);
    overflow-y: scroll;
    bottom: 0;
}

.scroll-1 {
    display: flex;
    flex-direction: row;
    align-items: right;
    width: 100vw;
    }

.pages::-webkit-scrollbar { 
    display: none;  /* Safari and Chrome */
}
.students-grid-right {
    margin-top: 0;
    align-self: flex-start;
    flex: 1;
    display: flex;
    padding:20px;
    gap: 20px;
    flex-wrap: wrap;
    flex-direction: row;
    z-index: 1;
    box-sizing: border-box;
    background-color: var(--black);
}


.students-top {
    position:relative;
    height: 140px;
    z-index: 10;
}
/* ... */

